grunt fsecond success

--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -24,4 +24,4 @@ block content
                             div.controls
                                 button(type='submit', class='btn btn-success') 发言
 
-        script(data-main='/javascripts/app/post-article',src='/javascripts/require.js')
+        script(data-main='/build/app/post-article',src='/javascripts/require.js')
