--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -42,4 +42,4 @@ block content
                     div(class='row-fluid')
                         div(class='span8') <%- content %>
 
-        script(data-main='/javascripts/app/review',src='/javascripts/require.js')
+        script(data-main='/build/app/review',src='/javascripts/require.js')
