backbone pageable step2

--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -36,12 +36,10 @@ script(type="text/template",id="item-template")
                 <%- creator.name %> 发表于 <%- fromNow %>
 
     hr.soft
+script(type="text/template",id="page-template")
     div.row-fluid
         div.span12
-
-
             div(id='pagination-div',class='pagination pagination-right')
-
 
 
 
