split pages succ step1

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -16,6 +16,12 @@ block content
                         div(class='tab-pane active',id='new')
                             div(id='posts')
                                 include home/post-content-bone
+                            div.row-fluid
+                                div.span12
+                                    div(id='pagination-div',class='pagination pagination-right')
+
+
+    
             div(class='span4 relative')
                 h4.title 发现排行
                 hr
