--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -8066,6 +8066,9 @@ body {
   width: 40px;
   height: 40px;
 }
+.blog-content a {
+  color: #000000;
+}
 /**one post**/
 .popover {
   display: block;
@@ -8165,7 +8168,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 212px;
+    width: 343px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -8188,7 +8191,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 212px;
+    width: 343px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -8206,7 +8209,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 212px;
+    width: 343px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
