--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -83,6 +83,9 @@ body {
   width: 40px;
   height: 40px;
 }
+.blog-content a {
+  color: #000000;
+}
 /**one post**/
 .popover {
   display: block;
@@ -182,7 +185,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 212px;
+    width: 343px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -205,7 +208,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 212px;
+    width: 343px;
     margin: 0 auto;
     text-align: center;
     padding: 10px 10px 0px 20px;
@@ -223,7 +226,7 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 212px;
+    width: 343px;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
