--- a/app/views/layouts/_message.jade
+++ b/app/views/layouts/_message.jade
@@ -1,5 +1,5 @@
-div.row-fluid
-    div.span12
+div.row
+    div.col-md-12
         if typeof(success) !== 'undefined' && success !== null && success!==''
             div(class='alert alert-success')
                 #{success}
