--- a/app/views/users/show.jade
+++ b/app/views/users/show.jade
@@ -5,14 +5,14 @@ block append head
 block content
     body
 
-        div(class='row-fluid')
+        div(class='row')
             ul(class='breadcrumb')
                 li(class='active') 个人资料
-                    span(class='divider') /
+                    span(class='divider')
                 li(class='active')
                     a(href='users/edit') 编辑
             hr
-            div(class='span6')
+            div(class='col-md-8')
                 table(class='table table-striped table-bordered table-hover')
                     tbody
                         tr
