--- a/app/views/layouts/_only-logo.jade
+++ b/app/views/layouts/_only-logo.jade
@@ -1,6 +1,8 @@
 div.navbar.navbar-inverse.navbar-fixed-top
     div.navbar-inner
         div.container
-            a.brand(href='/') @_@ 发现
+            a(class='navbar-brand',href='/')
+                i.icon-eye-open
+                | 发现
 
 
