--- a/app/views/layouts/_message.jade
+++ b/app/views/layouts/_message.jade
@@ -4,5 +4,5 @@ div.row
             div(class='alert alert-success')
                 #{success}
         if typeof(error) !== 'undefined' && error !== null && error!==''
-            div(class='alert alert-error')
+            div(class='alert alert-warning')
                 #{error}
